--- a/login.html
+++ b/login.html
@@ -125,8 +125,10 @@
                         </div>
                     </div>
                     <div class="d-grid mb-3">
-                        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                    </div>
+                  <button type="button" class="btn btn-primary" onclick="window.location.href='menu.html'">
+    Iniciar Sesión
+</button>
+  </div>
                 </form>
                 
                 <!-- Divisor -->
