--- a/menu.html
+++ b/menu.html
@@ -183,12 +183,7 @@
                     <span class="nav-link-text">Transacciones</span>
                 </a>
             </li>
-            <li>
-                <a href="#" class="nav-link text-white">
-                    <i class="fas fa-wallet me-3"></i>
-                    <span class="nav-link-text">Mi Billetera</span>
-                </a>
-            </li>
+            
             <li>
                 <a href="#" class="nav-link text-white">
                     <i class="fas fa-calendar-alt me-3"></i>
@@ -427,7 +422,8 @@
                                     <p class="card-text">Ofrezco compañía para citas médicas, eventos sociales y paseos.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <span class="price-badge text-success">$7.50/min</span>
-                                        <button class="btn btn-sm btn-outline-primary">Ver perfil</button>
+                                       <a href="vistaperfil.html" class="btn btn-sm btn-outline-primary">Ver perfil</a>
+
                                     </div>
                                 </div>
                             </div>
