--- a/login.html
+++ b/login.html
@@ -125,10 +125,8 @@
                         </div>
                     </div>
                     <div class="d-grid mb-3">
-                  <button type="button" class="btn btn-primary" onclick="window.location.href='menu.html'">
-    Iniciar Sesión
-</button>
-  </div>
+                        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                    </div>
                 </form>
                 
                 <!-- Divisor -->
